cambos en frontend

--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
@@ -1,3 +1,20 @@
+
+<header class="header" >
+  <a href="" class="logo">CSS Nav</a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <li class="nav-item">
+      <a class="nav-link" ui-sref-active="active" ui-sref="app.home">Home
+    </a></li>
+    <li class="nav-item">
+      <a class="nav-link" ui-sref-active="active" ui-sref="app.contact">
+      Contact
+    </a></li>
+  </ul>
+</header>
+<!-- 
+
 <nav class="navbar navbar-light">
   <div class="container">
 
@@ -6,7 +23,7 @@
       ng-bind="::$ctrl.appName | lowercase">
     </a>
 
-    <!-- Show this for logged out users -->
+    
     <ul show-authed="false"
       class="nav navbar-nav pull-xs-right">
 
@@ -36,7 +53,7 @@
 
     </ul>
 
-    <!-- Show this for logged in users -->
+    
     <ul show-authed="true"
       class="nav navbar-nav pull-xs-right">
 
@@ -76,10 +93,7 @@
         </a>
       </li>
 
-      <!-- <li>
-        <a ui-sref-active="active" ui-sref="app.contact" class="hvr-underline-from-center">Contact</a>
-      </li> -->
-
+     
       <li class="nav-item">
         <a class="nav-link"
           ui-sref-active="active"
@@ -94,3 +108,4 @@
 
   </div>
 </nav>
+ -->
