--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/css/main.css
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/css/main.css
@@ -1,152 +1,50 @@
+:root{
+  /* 
+  Typography
+   * ======================================================================== */
+    --font-family: 'Rubik', Helvetica, Arial, sans-serif;
 
-.divmio{
-    /* background-color: var(--rojo); */
-    background-color: aqua;
-    width: 500px;
-    height: 500px;
-    color:red;
-}
-.containerBody{
-    padding-top: 68px;
+  /*
+   * Media queries breakpoints
+   * ======================================================================== */
+
+    --sc-xs-min: 480px;  /* Extra small screen / phone */
+    --sc-sm-min: 768px;  /* Small screen / tablet */
+    --sc-md-min: 992px;  /* Medium screen / desktop */
+    --sc-lg-min: 1200px; /* Large screen / wide desktop */
+
+
+ /*
+  * Colors
+  * ======================================================================== */
+    --bgColorBody:#F9F9F9;
+    --texColor:#888888;
+    --gris-claro: #f9f9f9;  
+    --titleColor:#363949;
+    --white:#FFFFFF;
+
+    --red: #e62c3d;
+    --yell: #f9c468;
+    --oran:#ef7752;
+
+
+  /*
+  * Sizes
+  * ======================================================================== */
+    --generalWidth:1000px;
+    --iconSize:85px;
+    --fontSizeTitle:3.5rem;
+    --fontSizeSubtitle: 2.5rem;
+    --fontSizeText:1.5rem;
+    --slimLetters:100;
+
 }
 body {
   margin: 0;
-  font-family: Helvetica, sans-serif;
-  background-color: #f4f4f4;
+  font-family: var(--font-family);
+  background-color: var(--bgColorBody);
 }
 
 a {
   color: #000;
-}
-
-/* header */
-
-.header {
-        /* background-color: transparent; */
-  background-color: #fff;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
-
-.header ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  background-color: #fff;
-}
-
-.header li a {
-  display: block;
-  padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
-  text-decoration: none;
-}
-
-.header li a:hover,
-.header .menu-btn:hover {
-  background-color: #f4f4f4;
-}
-
-.header .logo {
-  display: block;
-  float: left;
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none;
-}
-
-/* menu */
-
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height .2s ease-out;
-}
-
-/* menu icon */
-
-.header .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  padding: 28px 20px;
-  position: relative;
-  user-select: none;
-}
-
-.header .menu-icon .navicon {
-  background: #333;
-  display: block;
-  height: 2px;
-  position: relative;
-  transition: background .2s ease-out;
-  width: 18px;
-}
-
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-  background: #333;
-  content: '';
-  display: block;
-  height: 100%;
-  position: absolute;
-  transition: all .2s ease-out;
-  width: 100%;
-}
-
-.header .menu-icon .navicon:before {
-  top: 5px;
-}
-
-.header .menu-icon .navicon:after {
-  top: -5px;
-}
-
-/* menu btn */
-
-.header .menu-btn {
-  display: none;
-}
-
-.header .menu-btn:checked ~ .menu {
-  max-height: 240px;
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
-}
-
-/* 48em = 768px */
-
-@media (min-width: 48em) {
-  .header li {
-    float: left;
-  }
-  .header li a {
-    padding: 20px 30px;
-  }
-  .header .menu {
-    clear: none;
-    float: right;
-    max-height: none;
-  }
-  .header .menu-icon {
-    display: none;
-  }
 }
