--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/buttons/follow-btn.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/buttons/follow-btn.html
@@ -1,8 +1,11 @@
 <button
-  style="background-color: red"
+  
   >
   <i class="ion-plus-round"></i>
-  &nbsp;
+  &nbsp;<span ng-style={{$ctrl.css}}>
   boton{{ $ctrl.u }}
    {{ $ctrl.user }}
+
+  {{$ctrl.css|json}}
+  </span>
 </button>
