working in  list and detail views

--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/Card/card.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/Card/card.html
@@ -1,4 +1,4 @@
-<div class="gridCategory" ng-click="$ctrl.prueba()">
+<div class="gridCategory" ng-click="$ctrl.prueba($ctrl.info)">
     <div class="imgCategory">
         <img src="../../../images/{{$ctrl.info.name | lowercase}}.svg" alt="Image">
     </div>
