--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
@@ -12,6 +12,14 @@
     <li class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.contact">Contact</a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link" ui-sref-active="active" ui-sref="app.login">Sing in</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" ui-sref-active="active" ui-sref="app.register">Sing up</a>
+    </li>
 <!-- 
     <li class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.listDetails">ListDetails</a>
