--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/Hero/hero.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/components/Hero/hero.html
@@ -4,3 +4,25 @@
         <p class="heroSubtitle"> {{$ctrl.info.info.subtitle}} </p>
     </div>
 </div>
+<!--<ui-carousel slides="{{ $ctrl.info.info.slides }}" on-init="carouselDemo.onCarouselInit()" slides-to-show="1" slides-to-scroll="1" initial-slide="0">
+       
+    <carousel-item>
+        <h2>{{ item.title }}</h2>
+        <img src="{{ item.image }}" alt="Image" />
+         
+    </carousel-item>
+
+        
+    <carousel-prev>
+        <button>Prev</button>
+          
+    </carousel-prev>
+
+    <carousel-next>
+        <button>next</button>
+          
+    </carousel-next>
+</ui-carousel>-->
+
+ 
+  
