--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/header.html
@@ -13,13 +13,18 @@
       <a class="nav-link" ui-sref-active="active" ui-sref="app.contact">Contact</a>
     </li>
 
-    <li class="nav-item">
+    <li show-authed="false" class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.login">Sing in</a>
     </li>
 
-    <li class="nav-item">
+    <li show-authed="false" class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.register">Sing up</a>
     </li>
+
+    <li show-authed="true" class="nav-item">
+      <a ng-click="$ctrl.logout()" >Log out</a>
+    </li>
+    
 <!-- 
     <li class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.listDetails">ListDetails</a>
