--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/footer.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/footer.html
@@ -1,10 +1,38 @@
 <footer id="footer">
-  <div class="container">
-    <a class="logo-font" ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase"></a>
-    <span class="attribution">
-      &copy; {{::$ctrl.date | date:'yyyy'}}.
-      An interactive learning project from <a href="https://thinkster.io">Thinkster</a>.
-      Code licensed under MIT.
-    </span>
+  <div >
+    <div class="gloriaGrid">
+  
+      <div class="elem1">
+        <div class="elemsTitle">
+          <p>GRUTINET S.L.</p>
+        </div>
+        <div>
+          <div>Cognitive Brain</div>
+          <div>C/ islas canarias 6,</div>
+          <div>46870 Ontinyent, Valencia, España.</div>
+          <div>cognitivebrain@info.com</div>
+          <div>+34 960 00 00 00</div>
+        </div>
+      </div>
+  
+      <div class="elem2">
+        <div>
+          <p>Apuntate a nuestra newsletter para estar siempre al día.</p>
+        </div>
+        <div class="gloriaTitle">
+          <input id="inpEmail" type="email" placegolder="Tu email"></input>
+          <button type="button" class="btnColor">SUSCRIBETE</button>
+        </div>
+      </div>
+  
+      <div class="elem3">
+        <div class="elemsTitle">
+          <p>MISIÓN</p>
+        </div>
+        <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae velit aliquid expedita dolorem pariatur amet nemo dicta, repudiandae totam, inventore natus, quos sed repellat quo ipsa et nostrum magni delectus</div>
+      </div>
+  
+    </div>
   </div>
+
 </footer>
