--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/css/main.css
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/css/main.css
@@ -261,3 +261,47 @@ HOMEPAGE
   .a{
     grid-area: a;    
   } */
+
+  /* contact */
+
+  .containerContact{
+    border-radius: 5px;
+    padding: 20px;
+  }
+
+  .inputs {
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    float: right;
+  }
+
+  .inputs, select, textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+  }
+
+  .btnContact{
+    background: linear-gradient(to left, var(--red), var(--yell));
+    padding: 5px;
+    color: var(--white);
+    border-radius: 5px;
+    border: none;
+    text-decoration: none;
+  }
+
+  .btnContact:hover{
+    /*border: 1px solid black;*/
+    background: rgb(136, 136, 136);
+  }
+
+  @media screen and (max-width: 600px) {
+    .inputs,.btnContact {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
