trabajando con vistas y user admin

--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/footer.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/layout/footer.html
@@ -4,7 +4,7 @@
   
       <div class="elem1">
         <div class="elemsTitle">
-          <p>GRUTINET S.L.</p>
+          <p>Cognitive Brain S.L.</p>
         </div>
         <div>
           <div>Cognitive Brain</div>
