--- a/frontend/src/js/layout/header.html
+++ b/frontend/src/js/layout/header.html
@@ -1,6 +1,6 @@
 
 <header class="header" >
-  <a ui-sref="app.home" class="logo">Empresa</a>
+  <a ui-sref="app.home" class="logo" style="color:#EA5047">Cognitive Brain</a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
