Add chat modules, they are working. We nedd check the action when some one try change his avatar img

--- a/frontend/src/css/viewsStyle.css
+++ b/frontend/src/css/viewsStyle.css
@@ -54,6 +54,15 @@
 }
 
 /* 
+    ******************************************  Chat WIEW 
+    ******************************************  
+    ******************************************  
+*/
+
+.contChat{
+    min-height: 800px
+}
+/* 
     ******************************************  Profile WIEW 
     ******************************************  
     ******************************************  
@@ -80,7 +89,8 @@
 .contMedia {
     max-width: var(--smallWidth)
 }
-.avatar{
+
+.avatar {
     width: 100%;
 }
 
