--- a/frontend/src/js/layout/header.html
+++ b/frontend/src/js/layout/header.html
@@ -13,6 +13,10 @@
       <a class="nav-link" ui-sref-active="active" ui-sref="app.contact">Contact</a>
     </li>
 
+    <li show-authed="true" class="nav-item">
+      <a class="nav-link" ui-sref-active="active" ui-sref="app.user_chat">Chat</a>
+    </li>
+
     <li show-authed="false" class="nav-item">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.login">Sing in</a>
     </li>
@@ -26,11 +30,11 @@
     </li>
 
     <li show-authed="true" class="nav-item">
-      <a ng-click="$ctrl.logout()" >Log out</a>
+      <a style="cursor: pointer" ng-click="$ctrl.logout()" >Log out</a>
     </li>
     
     <li show-authed="true" class="nav-item">
-      <a style="padding: 0px;">
+      <a style="padding: 0px;" ui-sref="app.profile_user">
         <img ng-src="{{$ctrl.user.media}}" style="height: 60px; padding:4px 30px 4px 30px;" alt="">
       </a>
     </li>
