--- a/frontend/src/css/viewsStyle.css
+++ b/frontend/src/css/viewsStyle.css
@@ -393,7 +393,7 @@ width: 150px; */
 }
 
 /*
-    ******************************************  FOOTER
+    ******************************************  Recover Password
     ******************************************  
     ******************************************          
 */
