create component to Plan/Stripe + fix show damin menu + add check user lock + add scroll on listTest

--- a/frontend/src/js/layout/header.html
+++ b/frontend/src/js/layout/header.html
@@ -25,7 +25,7 @@
       <a class="nav-link" ui-sref-active="active" ui-sref="app.register">Sing up</a>
     </li>
 
-    <li show-authed="true" class="nav-item">
+    <li show-authed="true" class="nav-item" ng-if="$ctrl.user.type==1 || $ctrl.user.type_user==1">
       <a class="nav-link" ui-sref-active="active" ui-sref="app.admin">Administracion</a>
     </li>
 
